# control_chart_agent_demo

./: .env.sample  .gitignore  app.py  myfunc.py  pyproject.toml  step1.py  vectorize_sources.py
data/trend/: metadata.json  trend_data.csv
libs/: search.py  tools.py
workdir/: analyze_trend.ipynb  utils.py
